
CONFIG
	Fixed: Missing /php-fpm/php-fpm.pool.default declaration in configs/ubuntu/php-fpm/install.xml
	Updated: Licence header in skeletons

CONTRIB
	Fixed: "my" variable $cfgTpl masks earlier declaration in same scope (20_dovecot_connections.pl)
	Fixed: "my" variable $cfgTpl masks earlier declaration in same scope (40_dovecot_pfs.pl)

INSTALLER
	Fixed: Perl DBI (mysql) package removed when using MariaDB server leading to installation/update failure
	Fixed: Switch policy is ignored (SQL servers)
	Fixed: Wrong package names in Debian Strech package file (MySQL 5.6)

FRONTEND
	Fixed: Unable to handle uncaught exception thrown... Data `translator` is not registered
	Fixed: Exception browser writer doesn't display the expected exception in some contexts
	Fixed: Exception mail writer cache do not work

------------------------------------------------------------------------------------------------------------------------
1.2.12
------------------------------------------------------------------------------------------------------------------------

2016-02-23: Laurent Declercq
	RELEASE i-MSCP 1.2.12

BACKEND
	Added: Support for TCP/IP (PHP-FPM)
	Backported: iMSCP::Crypt library from 1.3.x branch
	Fixed: Could not remove service: Not a CODE reference at PerlLib/iMSCP/Provider/Service/Systemd.pm line 115
	Fixed: Could not remove service: Unit not loaded (systemd provider)
	Fixed: Don't use Cyrus SASL for SMTP authentication when the Dovecot SASL implementation is available
	Fixed: Mail passwords are no longer valid after client account re-activation

CONFIG
	Added: BACKUP_COMPRESS_LEVEL configuration parameter
	Added: Default www.conf pool configuration file (PHP-FPM)
	Added: docs/imscp_net_sysctl.conf configuration file example
	Added: DOVECOT_SASL_AUTH_SOCKET_PATH parameter in dovecot/dovecot.data file
	Added: event_scheduler parameter in mysql/imscp.cnf file to disable event scheduler (see errata file)