@@ -13,7 +13,8 @@ CONTRIB
 	Fixed: "my" variable $cfgTpl masks earlier declaration in same scope (40_dovecot_pfs.pl)
 
 INSTALLER
-	Fixed: Perl DBI (mysql) package removed when using MariaDB server leading to installation/update failure
+	Fixed: Ensure that authentication plugin is set to 'mysql_native_password' for SQL root user (MySQL >= 5.7)
+	Fixed: Perl DBI (mysql) package removed when using MariaDB server, leading to installation/update failure
 	Fixed: Switch policy is ignored (SQL servers)
 	Fixed: Wrong package names in Debian Strech package file (MySQL 5.6)
 
@@ -21,6 +22,7 @@ FRONTEND
 	Fixed: Unable to handle uncaught exception thrown... Data `translator` is not registered
 	Fixed: Exception browser writer doesn't display the expected exception in some contexts
 	Fixed: Exception mail writer cache do not work
+	Fixed: Unable to establish the connection to the database when using MySQL >= 5.7
 
 ------------------------------------------------------------------------------------------------------------------------
 1.2.12
